--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,10 @@ nav {
     margin: 40px 0;
 }
 
+.choose {
+    margin: 40px 0;
+}
+
 /* Contact section styles */
 .contact {
     padding: 50px 0;
