--- a/styles.css
+++ b/styles.css
@@ -96,14 +96,17 @@ nav {
 
 .service {
     margin: 40px 0;
+    
 }
 
 .choose {
     margin: 40px 0;
+    text-align: center;
 }
 
 .join {
     margin: 40px 0;
+    text-align: center;
 }
 
 
