--- a/Task-02/style.css
+++ b/Task-02/style.css
@@ -87,3 +87,22 @@ li {
   padding: 5px 10px;
   cursor: pointer;
 }
+
+progress {
+    width: 100%;
+    height: 20px;
+    margin-top: 10px;
+    appearance: none; /* Remove the default styling */
+}
+
+
+progress::-webkit-progress-bar {
+    background-color: #ccc;
+    border-radius: 10px;
+}
+
+progress::-webkit-progress-value {
+    background-color: #007bff; /* Change to your desired color */
+    border-radius: 10px;
+}
+
